# UQTk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  build.sh  change_UQTk.sh  get_dir_names.sh  new_header_cpp  new_header_f  new_header_i  new_header_py
PyUQTk/: CMakeLists.txt  README  __init__.py  bcs.py  kle.py  lowrank.py  numpy.cmake  pce.py  quad.py  tools.py  uqtkarray.py
PyUQTk/PyPCE/: CMakeLists.txt  __init__.py  adaptation_tools.py  pce_tools.py
PyUQTk/adaptation_tools/: CMakeLists.txt  __init__.py  adaptation_tools.py
PyUQTk/bcs/: CMakeLists.txt  PyBCS.cpp  bcs.i  bcs_ext.py
PyUQTk/bcs_ext/: CMakeLists.txt  __init__.py  bcs_ext.py
PyUQTk/inference/: CMakeLists.txt  __init__.py  bayes_evid.py  evidence_solvers.py  mcmc.py  postproc.py
PyUQTk/kle/: CMakeLists.txt  PyKle.cpp  kle.i  pyKle.cpp
PyUQTk/lowrank/: CMakeLists.txt  pylowrank.cpp
PyUQTk/mcmc/: CMakeLists.txt  mcmc.i
PyUQTk/multirun/: CMakeLists.txt  __init__.py  multirun.py  srun.x
PyUQTk/numpy/: numpy.i
PyUQTk/pce/: CMakeLists.txt  pce.i  pypce.cpp
PyUQTk/pce pybind/: pypce.cpp
PyUQTk/pce_tools/: CMakeLists.txt  __init__.py  pce_tools.py
PyUQTk/plotting/: CMakeLists.txt  __init__.py  fits.py  inout.py  pdfs.py  surrogate.py
PyUQTk/pytests/: CMakeLists.txt  PyArrayTest.py  PyArrayTest2.py  PyBADPTest.py  PyBCS1DTest.py  PyBCS2DTest.py  PyBCSTest.py  PyBCSTest1D.py  PyBCSTest2D.py  PyGalerkinTest.py  PyHMCMCTest.py  PyMCMC2dTest.py  PyMCMCTest.py  PyModTest.py  PyPCE1dTest.py  PyPCE2dTest.py  PyQuadTest.py  PyRegressionTest.py
PyUQTk/pyuqtkarray/: CMakeLists.txt  pyuqtkarray.cpp  pyuqtkarray_tools.py
PyUQTk/pyuqtkarray_tools/: CMakeLists.txt  __init__.py  pyuqtkarray_tools.py
PyUQTk/quad/: CMakeLists.txt  pyquad.cpp  quad.i
PyUQTk/sens/: CMakeLists.txt  __init__.py  gsalib.py  gsatest.py
PyUQTk/tmcmc/: CMakeLists.txt  tmcmc.i
PyUQTk/tools/: CMakeLists.txt  pyTools.cpp  tools.i
PyUQTk/uqtkarray/: CMakeLists.txt  arrayext.i  pyuqtkarray.cpp  pyuqtkarray.h  uqtkarray.i
PyUQTk/uqtkarray pybind/: pyuqtkarray.h
PyUQTk/utils/: CMakeLists.txt  __init__.py  colors.py  correlations.py  crps.py  func.py  mindex_order.py  multiindex.py  pdf_kde.py  regr.py
cpp/: CMakeLists.txt  README
cpp/app/: CMakeLists.txt  README
cpp/lib/: CMakeLists.txt
cpp/tests/: CMakeLists.txt  README
dep/: CMakeLists.txt  README
dep/ann/: ANN.cpp  ANN.h  ANNperf.h  CMakeLists.txt  LICENSE  bd_fix_rad_search.cpp  bd_tree.h  kd_dump.cpp  kd_fix_rad_search.cpp  kd_tree.h  kd_util.cpp  kd_util.h  pr_queue_k.h
dep/blas/: CMakeLists.txt  LICENSE  d1mach.f
dep/cvode-2.7.0/: CMakeLists.txt
dep/dsfmt/: CMakeLists.txt  README  dSFMT.c  dSFMT.h  dSFMT_h.c  dsfmt_add.c  dsfmt_add.h
dep/figtree/: CMakeLists.txt  KCenterClustering.cpp  KCenterClustering.h  LICENSE  figtree.cpp  figtree.h  figtree_internal.h
dep/lapack/: CMakeLists.txt  LICENSE  dgetf2.f  dgetri.f  dhseqr.f  dlaic1.f
dep/lbfgs/: CMakeLists.txt  LICENSE  lbfgsDR.c  lbfgs_routines.f  lbfgs_routines.h
dep/muq/: .gitignore  CMakeLists.txt  Dockerfile  graph
dep/slatec/: CMakeLists.txt  LICENSE  depslatec.h  isdgmr.f
examples/: CMakeLists.txt  README
examples/bare_bcs/: CMakeLists.txt  bare_bcs.ipynb  readme.md
examples/custom_mcmc/: Makefile  README  custom_inf.cpp  custom_sam.cpp  xdata.txt  ydata.txt
examples/d_spring_series/: CMakeLists.txt  README  d_springs_tools.py  run_d_springs.py
examples/dfi/: CMakeLists.txt  README
examples/dfi_app/: 1_quadratic_one_data_set.ipynb  2_quadratic_two_data_sets.ipynb  3_quadratic_two_data_sets_disagree.ipynb  4_quadratic_two_data_sets_different_nb_of_points.ipynb  5_quadratic_with_optimal_beta.ipynb  CMakeLists.txt  README  utils.py
examples/dfi_line/: CMakeLists.txt  Makefile  userFunctions_line.cpp
examples/fwd_prop/: CMakeLists.txt  README  heat_transfer_pce_tools.py  rad_heat_transfer_atm_pce.py
examples/fwd_prop_new/: CMakeLists.txt  heat_transfer_pce_tools.py  rad_heat_transfer_atm_pce.py
examples/heat_transfer_window/: CMakeLists.txt  README  heat_transfer_window.ipynb  window_tools.py
examples/iuq/: CMakeLists.txt  README  get_postpred.py  get_postsam.py  plot_fit1d.py  plot_pdfs.py  plot_prpost.py  plot_sens.py  plot_shade.py  postp_infer.x  prep_calib.x  prep_data1.x  prep_data2.x  prep_model1.x  prep_model2.x  run_infer.x  workflow.x
examples/kle_ex1/: CMakeLists.txt  README  kl_1D.cpp  kl_2D.cpp  kl_2Du.cpp  kl_utils.cpp  kl_utils.h  mkplots.py  pl2Dsgrid.py  pl2Dugrid.py  pyutils.py  run1D.sh  run2D.sh
examples/line_infer/: CMakeLists.txt  README  XMLreader.h  line_infer.cpp  line_infer.py  line_infer.xml  model.h  posterior.h
examples/mcmc_griewank/: CMakeLists.txt  cluster.sh  hdf5clean.sh  lprior.hpp  model.cpp  run.sh  tmcmc_getLL.sh  tmcmc_getLP.sh
examples/mcmc_hdf5/: CMakeLists.txt  SpectralClustering.py  lprior.cpp  model.cpp  move.sh  run.sh  tmcmc_getLL.sh  tmcmc_getLP.sh
examples/mcmc_manifold/: CMakeLists.txt  PyKDE.py  driver.cpp  lprior.cpp  model.cpp  run.sh  tmcmc_getLL.sh  tmcmc_getLP.sh
examples/mcmc_pol/: CMakeLists.txt  getEv.sh  lprior.cpp  model.py  run.sh  tmcmc_getLL.sh  tmcmc_getLP.sh
examples/mcmc_rb/: CMakeLists.txt  lprior.cpp  pp.sh  proc.py  run.sh  tmcmc_getLL.sh  tmcmc_getLP.sh
examples/muq/: CMakeLists.txt  Makefile  README  genzGP.py  muqPCE2uqtk.cpp
examples/num_integ/: CMakeLists.txt  README  full_quad.py  quad_tools.py  sparse_quad.py
examples/ops/: CMakeLists.txt  LogComp.cpp  Makefile  Ops.cpp  README  Utils.cpp  Utils.h  plot_logs.py  plot_pdf.py  test_all.sh
examples/pce_bcs/: CMakeLists.txt  README  pce_bcs.cpp  pce_bcs.h
examples/polynomial/: CMakeLists.txt  README
examples/py_surr_inf/: GSAProj.py
examples/rosenblatt/: RosenblattDemo.py  RosenblattUtils.py  uniform2KL.py
examples/sampling_qmc/: CMakeLists.txt  spl_qmc.cpp
examples/sensMC/: CMakeLists.txt  README  genRndSpls.sh  model.sh  rmspls.sh  run.sh
examples/surf_rxn/: CMakeLists.txt  Makefile  README  SurfRxnDet.cpp  SurfRxnISP.cpp  SurfRxnMulti.py  (+19 more)
test/: CMakeLists.txt  config-lince.sh  hello.cpp
(+2177 files in other folders)
